--- a/Benutzerverwaltung/Benutzerverwaltung/MainWindow.xaml
+++ b/Benutzerverwaltung/Benutzerverwaltung/MainWindow.xaml
@@ -55,6 +55,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="26" Margin="426,39,0,0" VerticalAlignment="Top" Width="85" Click="button_Click"/>
+
     </Grid>
 </Window>
