--- a/Benutzerverwaltung/Benutzerverwaltung/View/CustomerDetailsView.xaml
+++ b/Benutzerverwaltung/Benutzerverwaltung/View/CustomerDetailsView.xaml
@@ -4,9 +4,44 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Benutzerverwaltung.View"
+        xmlns:viewmodel="clr-namespace:Benutzerverwaltung.ViewModel"
+         xmlns:p="clr-namespace:Benutzerverwaltung.Properties"
         mc:Ignorable="d"
         Title="CustomerDetailsView" Height="300" Width="300">
-    <Grid x:Name="mainGrid">
-        
+    <Window.Resources>
+        <viewmodel:DetailsViewModel x:Key="detailsVM"/>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource detailsVM}" x:Name="root" Margin="20">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <!--Labels-->
+        <Label Content="{x:Static p:Resources.FirstName}" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Label Content="{x:Static p:Resources.LastName}" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+        <Label Content="{x:Static p:Resources.Address}" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+        <Label Content="{x:Static p:Resources.Birthdate}" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+        <Label Content="{x:Static p:Resources.CustomerId}" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+        <Label Content="{x:Static p:Resources.Username}" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+
+        <!--Textboxex-->
+
+        <TextBox x:Name="txtFirstName" Grid.Column="1" Grid.Row="0"  Margin="10,5,10,5" Text="{Binding Path=FirstName}"/>
+        <TextBox x:Name="txtLastName" Grid.Column="1" Grid.Row="1" Margin="10,5,10,5" Text="{Binding Path=LastName}"/>
+        <TextBox x:Name="txtAddress" Grid.Column="1" Grid.Row="2"  Margin="10,5,10,5" Text="{Binding Path=Address}"/>
+        <TextBox x:Name="txtBirthDate" Grid.Column="1" Grid.Row="3" Margin="10,5,10,5" Text="{Binding Path=BirthDate}"/>
+        <TextBox x:Name="txtCustomerId" Grid.Column="1" Grid.Row="4" Margin="10,5,10,5" Text="{Binding Path=CustomerId}"/>
+        <TextBox x:Name="txtUsername" Grid.Column="1" Grid.Row="5" Margin="10,5,10,5" Text="{Binding Path=Username}"/>
+
+        <!-- Buttons-->
     </Grid>
 </Window>
