--- a/Benutzerverwaltung/Benutzerverwaltung/View/CustomerDetailsView.xaml
+++ b/Benutzerverwaltung/Benutzerverwaltung/View/CustomerDetailsView.xaml
@@ -7,11 +7,11 @@
         xmlns:viewmodel="clr-namespace:Benutzerverwaltung.ViewModel"
          xmlns:p="clr-namespace:Benutzerverwaltung.Properties"
         mc:Ignorable="d"
-        Title="CustomerDetailsView" Height="300" Width="300">
+        Title="CustomerDetailsView" Height="500" Width="800">
     <Window.Resources>
         <viewmodel:DetailsViewModel x:Key="detailsVM"/>
     </Window.Resources>
-    <Grid DataContext="{StaticResource detailsVM}" x:Name="root" Margin="20">
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" DataContext="{StaticResource detailsVM}" x:Name="root" Margin="20">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -35,12 +35,12 @@
 
         <!--Textboxex-->
 
-        <TextBox x:Name="txtFirstName" Grid.Column="1" Grid.Row="0"  Margin="10,5,10,5" Text="{Binding Path=FirstName}"/>
-        <TextBox x:Name="txtLastName" Grid.Column="1" Grid.Row="1" Margin="10,5,10,5" Text="{Binding Path=LastName}"/>
-        <TextBox x:Name="txtAddress" Grid.Column="1" Grid.Row="2"  Margin="10,5,10,5" Text="{Binding Path=Address}"/>
-        <TextBox x:Name="txtBirthDate" Grid.Column="1" Grid.Row="3" Margin="10,5,10,5" Text="{Binding Path=BirthDate}"/>
-        <TextBox x:Name="txtCustomerId" Grid.Column="1" Grid.Row="4" Margin="10,5,10,5" Text="{Binding Path=CustomerId}"/>
-        <TextBox x:Name="txtUsername" Grid.Column="1" Grid.Row="5" Margin="10,5,10,5" Text="{Binding Path=Username}"/>
+        <TextBox x:Name="txtFirstName" Grid.Column="1" Grid.Row="0"  Margin="10,5,10,5" Text="{Binding Path=Kunde.FirstName}"/>
+        <TextBox x:Name="txtLastName" Grid.Column="1" Grid.Row="1" Margin="10,5,10,5" Text="{Binding Path=Kunde.LastName}"/>
+        <TextBox x:Name="txtAddress" Grid.Column="1" Grid.Row="2"  Margin="10,5,10,5" Text="{Binding Path=Kunde.Adress}"/>
+        <TextBox x:Name="txtBirthDate" Grid.Column="1" Grid.Row="3" Margin="10,5,10,5" Text="{Binding Path=Kunde.BirthDate}"/>
+        <TextBox x:Name="txtCustomerId" Grid.Column="1" Grid.Row="4" Margin="10,5,10,5" Text="{Binding Path=Kunde.CustomerId}"/>
+        <TextBox x:Name="txtUsername" Grid.Column="1" Grid.Row="5" Margin="10,5,10,5" Text="{Binding Path=Kunde.Username}"/>
 
         <!-- Buttons-->
     </Grid>
