--- a/LagerVerwaltung/LagerVerwaltung/MainWindow.xaml
+++ b/LagerVerwaltung/LagerVerwaltung/MainWindow.xaml
@@ -4,9 +4,48 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LagerVerwaltung"
+        xmlns:viewmodel="clr-namespace:LagerVerwaltung.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow"  WindowState="Maximized" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <viewmodel:MainWindowViewModel x:Key="mainViewModel"/>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource mainViewModel}" x:Name="root">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="121*"></ColumnDefinition>
+            <ColumnDefinition Width="159*"></ColumnDefinition>
+            <ColumnDefinition Width="100*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Label x:Name="lblSelected" Content="gewähltes Teil" Grid.Column="1" HorizontalAlignment="Left" Height="30" Margin="10,47,0,0" VerticalAlignment="Top" Width="124"/>
+        <Label x:Name="lblPreis" Content="Preis:" Grid.Column="1" HorizontalAlignment="Left" Height="34" Margin="10,113,0,0" VerticalAlignment="Top" Width="124"/>
+        <Label x:Name="lblLagerbestand" Content="Lagerbestand" Grid.Column="1" HorizontalAlignment="Left" Height="34" Margin="10,182,0,0" VerticalAlignment="Top" Width="124"/>
+        <TextBox x:Name="txtSelected" Grid.Column="1" HorizontalAlignment="Left" Height="30" Margin="169,47,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="139" IsEnabled="False"/>
+        <TextBox x:Name="txtPreis" Grid.Column="1" HorizontalAlignment="Left" Height="34" Margin="169,113,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="139"/>
+        <TextBox x:Name="txtBestand" Grid.Column="1" HorizontalAlignment="Left" Height="34" Margin="169,182,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="139"/>
+        <Button x:Name="btnChange" Content="Change Part" Grid.Column="1" HorizontalAlignment="Left" Height="40" Margin="24,274,0,0" VerticalAlignment="Top" Width="154" Command="{Binding ChangeTeilCommand}"/>
+        <Button x:Name="btnCreate" Content="Create New Part" Grid.Column="1" HorizontalAlignment="Left" Height="40" Margin="24,333,0,0" VerticalAlignment="Top" Width="154" Command="{Binding CreateTeilCommand}"/>
+        <Button x:Name="btnOrder" Content="Order Part" Grid.Column="1" HorizontalAlignment="Left" Height="40" Margin="24,392,0,0" VerticalAlignment="Top" Width="154"  Command="{Binding OrderTeilCommand}"/>
+       
+        <ListView x:Name="lvTeile" Grid.Column="0" HorizontalAlignment="Left" Height="297" Margin="10,31,0,0" VerticalAlignment="Top" Width="222" ItemsSource="{Binding Path=allTeile, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="lvTeile_SelectionChanged">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Bezeichnung }" 
+                        Header="Bezeichnung"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Preis}" Header="Preis"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <ListView x:Name="lvMessage" Grid.Column="2" HorizontalAlignment="Left" Height="211" Margin="30,45,0,0" VerticalAlignment="Top" Width="160" ItemsSource="{Binding Path=importantMessages, UpdateSourceTrigger=PropertyChanged}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Short}" Header="Message"/>
+                    <GridViewColumn>
+                        <Button  DataContext="{StaticResource mainViewModel}" Content="Show Details" Command="{Binding DetailMessageCommand}"></Button>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+
     </Grid>
 </Window>
