--- a/Benutzerverwaltung/Benutzerverwaltung/MainWindow.xaml
+++ b/Benutzerverwaltung/Benutzerverwaltung/MainWindow.xaml
@@ -43,19 +43,20 @@
                         Header="" Width="150">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <StackPanel  DataContext="{StaticResource mainViewmodel}" Width="50">
+                                <StackPanel  Width="50">
                                     <!--<Button  Style="{StaticResource ImageButton}" Command="{Binding DetailsCustomerCommand}">
                                         <StackPanel Orientation="Horizontal" Margin="10">
                                             <Image Source="Images/Lupe.png" Width="16" Height="16" Margin="0,0,10,0"/>
                                         </StackPanel>
                                     </Button>-->
-                                    <custom:CustomerButton CustId="{Binding Path=CustomerId}" Click="CustomerButton_Click" >
-                                        <!--ButtonVisibility="{Binding DeleteCustomerCommand}"--></custom:CustomerButton>
-                                    <Button Style="{StaticResource ImageButton}" Command="{Binding DeleteCustomerCommand}">
+                                    <custom:CustomerButton ImageBtn="Images/Lupe.png" CustId="{Binding Path=CustomerId}" Click="CustomerButton_Click" ></custom:CustomerButton>
+                                    <custom:CustomerButton ImageBtn="Images/DelSymbol.png" CustId="{Binding Path=CustomerId}" Click="CustomerButtonDel_Click" >
+                                            <!--ButtonVisibility="{Binding DeleteCustomerCommand}"--></custom:CustomerButton>
+                                   <!-- <Button Style="{StaticResource ImageButton}" Command="{Binding DeleteCustomerCommand}">
                                         <StackPanel Orientation="Horizontal" Margin="10">
                                             <Image Source="Images/DelSymbol.png" Width="16" Height="16" Margin="0,0,10,0"/>
                                         </StackPanel>
-                                    </Button>
+                                    </Button>-->
 
                                 </StackPanel>
                             </DataTemplate>
