--- a/LagerVerwaltung/LagerVerwaltung/View/BestellenView.xaml
+++ b/LagerVerwaltung/LagerVerwaltung/View/BestellenView.xaml
@@ -4,9 +4,27 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LagerVerwaltung.View"
+         xmlns:viewmodel="clr-namespace:LagerVerwaltung.ViewModel"
+          xmlns:res="clr-namespace:LagerVerwaltung.Properties"
         mc:Ignorable="d"
-        Title="BestellenView" Height="300" Width="300">
-    <Grid>
-        
+        Title="BestellenView" Height="500" Width="900" Initialized="Window_Initialized">
+    <Window.Resources>
+        <viewmodel:BestellenViewModel x:Key="bestellenViewModel"/>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource bestellenViewModel}" x:Name="root">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="200"></RowDefinition>
+            <RowDefinition Height="300"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Label x:Name="lblBez" Grid.Row="0" Content="{x:Static res:Resources.NameOfPart}" HorizontalAlignment="Left" Height="26" Margin="36,37,0,0" VerticalAlignment="Top" Width="114"/>
+        <Label x:Name="lblPreis" Grid.Row="0" Content="{x:Static res:Resources.Price}" HorizontalAlignment="Left" Height="27" Margin="36,92,0,0" VerticalAlignment="Top" Width="114"/>
+        <Label x:Name="lblStueck" Grid.Row="0" Content="{x:Static res:Resources.OrderAmount}" HorizontalAlignment="Left" Height="27" Margin="36,140,0,0" VerticalAlignment="Top" Width="114"/>
+        <TextBox x:Name="txtBez" HorizontalAlignment="Left" Height="26" Margin="190,37,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Text="{Binding Path=PartToOrder}" IsEnabled="False" Width="145"/>
+        <TextBox x:Name="txtPreis" HorizontalAlignment="Left" Height="26" Margin="190,92,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Text="{Binding Preis}" IsEnabled="False" Width="145"/>
+        <TextBox x:Name="txtMenge" HorizontalAlignment="Left" Height="26" Margin="190,140,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Text="{Binding Menge}" IsEnabled="True" Width="145"/>
+        <Button x:Name="btnOrder" Grid.Row="0" Content="{x:Static res:Resources.OrderPart}" HorizontalAlignment="Left" Height="21" Margin="408,169,0,0" VerticalAlignment="Top" Width="74" Command="{Binding OrderTeilCommand}"/>
+        <WebBrowser HorizontalAlignment="Left" Height="249" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="872" Name="browser"/>
+
+
     </Grid>
 </Window>
