--- a/LagerVerwaltung/LagerVerwaltung/View/CreateTeilView.xaml
+++ b/LagerVerwaltung/LagerVerwaltung/View/CreateTeilView.xaml
@@ -28,7 +28,7 @@
         <TextBox x:Name="txtBez" Grid.Column="1" Grid.Row="0" Margin="20" Text="{Binding Path=Bezeichnung}"/>
         <TextBox x:Name="txtPrice" Grid.Column="1" Grid.Row="1" Margin="20" Text="{Binding Path=Preis}"/>
 
-        <Button Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.CreateNewPart}" Command="{Binding CreateTeilCommand}"></Button>
+        <Button Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.CreateNewPart}" Command="{Binding CreateTeilCommand}" VerticalAlignment="Center" HorizontalAlignment="Center"></Button>
 
     </Grid>
 </Window>
