--- a/LagerVerwaltung/LagerVerwaltung/View/Geomap.xaml
+++ b/LagerVerwaltung/LagerVerwaltung/View/Geomap.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="LagerVerwaltung.View.BestellenView"
+﻿<Window x:Class="LagerVerwaltung.View.Geomap"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LagerVerwaltung.View"
         mc:Ignorable="d"
-        Title="BestellenView" Height="300" Width="300">
+        Title="Geomap" Height="300" Width="300" Initialized="Window_Initialized">
     <Grid>
-        <Button Click="ShowGeomap">View Map</Button>
+        <WebBrowser x:Name="browser"></WebBrowser>
     </Grid>
 </Window>
