--- a/LagerVerwaltung/LagerVerwaltung/View/BestellenView.xaml
+++ b/LagerVerwaltung/LagerVerwaltung/View/BestellenView.xaml
@@ -7,7 +7,7 @@
          xmlns:viewmodel="clr-namespace:LagerVerwaltung.ViewModel"
           xmlns:res="clr-namespace:LagerVerwaltung.Properties"
         mc:Ignorable="d"
-        Title="BestellenView" Height="500" Width="900" Initialized="Window_Initialized">
+        Title="BestellenView" Height="500" Width="900" Loaded="Window_Initialized">
     <Window.Resources>
         <viewmodel:BestellenViewModel x:Key="bestellenViewModel"/>
     </Window.Resources>
@@ -25,7 +25,7 @@
         <Button x:Name="btnOrder" Grid.Row="0" Content="{x:Static res:Resources.OrderPart}" HorizontalAlignment="Left" Height="21" Margin="408,169,0,0" VerticalAlignment="Top" Width="74" Command="{Binding OrderTeilCommand}"/>
         <WebBrowser HorizontalAlignment="Stretch"  Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Stretch" Name="browser"/>
         <TextBox x:Name="txtTime" Grid.Row="0" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="190,171,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="145"/>
-        <Label x:Name="lblTime" Grid.Row="0" Content="{x:Static res:Resources.TimeNeeded}" HorizontalAlignment="Left" Height="27" Margin="36,169,0,0" VerticalAlignment="Top" Width="114"/>
+        <Label x:Name="lblTime" Grid.Row="0" Content="{x:Static res:Resources.TimeNeeded}" HorizontalAlignment="Left" Height="27" Margin="36,169,0,0" VerticalAlignment="Top" Width="126"/>
 
 
     </Grid>
